--- a/views/example.handlebars
+++ b/views/example.handlebars
@@ -1,6 +1,6 @@
 <div class="container">
   <div class="row">
-    <div class="col-8 offset-2">
+    <div class="col-4">
       <div class="card mt-4">
         <div class="card-body">
           <h5 class="card-title">Foods Eaten</h5>
