added keys to columns in handlebars for CSS

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,7 +1,7 @@
 <div id="home">
-  <div class="container">
-    <div class="row">
-      <div class="col-4">
+  <div class="container-fluid">
+    <div class="row" id="weighToGo">
+      <div class="col-4" id="colY">
         <h1>Weigh to Go!</h1>
         <form class="clearfix mb-4" action="POST">
           <div class="form-group">
@@ -25,6 +25,8 @@
           </li>
           {{/each}}
         </ul>
+      </div>
+      <div class="col-8" id="colB">
       </div>
     </div>
   </div>
