Added bootstrap and linked the css

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -3,7 +3,7 @@
     <form class="login">
       <input type="text" placeholder="username" />
       <input type="password" placeholder="password" />
-      <button>SIGN IN</button>
+      <button type="button" class="btn btn-primary">SIGN IN</button>
       <!--this should have an href link to navigate to Calorie_counter? if they already have an account, they do
       not need to re-enter any data -->
       <p class="message">Not registered? <a href="/register">CREATE AN ACCOUNT</a></p>
