--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,27 +3,29 @@
 
 <head>
   <meta charset="UTF-8">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="../../public/styles/styles.css">
+  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
 
 
   <title>Weigh to Go!</title>
 </head>
 
-  <header>
-    <nav>
-      <h1>Weigh to Go!</h1>
-      <ul>
-        <li>
-          <a href="/Calorie_counter">Food Diary</a>
-        </li>
-        <li>
-          <a href="../graph">Track your Progress</a>
-        </li>  
-      </ul>
-    </nav>
-  </header>
+<header>
+  <nav>
+    <h1>Weigh to Go!</h1>
+    <ul>
+      <li>
+        <a href="/Calorie_counter">Food Diary</a>
+      </li>
+      <li>
+        <a href="../graph">Track your Progress</a>
+      </li>
+    </ul>
+  </nav>
+</header>
 
 <body>
   <div class="container">
