created new dashboard page, added code to calorie counter, created navbars

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -7,9 +7,9 @@
 }
 
 #weighToGo h1 {
-  color: #f2efdc
+  color: #f2efdc;
 }
 
 h1 {
-  font-family: 'Alfa Slab One', cursive;
+  font-family: "Alfa Slab One", cursive;
 }
