updating Sunny's models and routes

--- a/views/layouts/landingPg.handlebars
+++ b/views/layouts/landingPg.handlebars
@@ -3,17 +3,16 @@
 
 <head>
   <meta charset="UTF-8">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="../../public/styles/styles.css">
+  <link rel="stylesheet" href="/css/style.css">
 
 
   <title>Weigh to Go!</title>
 </head>
 
 <body>
-  <h1>Weigh to Go!</h1>
+<h1>Weigh to Go!</h1>
   <div class="container">
     {{{body}}}
   </div>
