--- a/views/layouts/landingPg.handlebars
+++ b/views/layouts/landingPg.handlebars
@@ -5,14 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/css/style.css">
+  <link href="/public/styles/styles.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
+
 
 
   <title>Weigh to Go!</title>
 </head>
 
 <body>
-<h1>Weigh to Go!</h1>
+  <h1>Weigh to Go!</h1>
   <div class="container">
     {{{body}}}
   </div>
