--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -5,29 +5,16 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="/css/style.css">
+  <link href="/public/styles/styles.css" rel="stylesheet" type="text/css">
+  <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
 
 
   <title>Weigh to Go!</title>
 </head>
 
-
-  <header>
-    <nav>
-      <h1>Weigh to Go!</h1>
-      <ul>
-        <li>
-          <a href="/Calorie_counter">Food Diary</a>
-        </li>
-        <li>
-          <a href="../graph">Track your Progress</a>
-        </li>  
-      </ul>
-    </nav>
-  </header>
-
 <body>
-  <div class="container">
+  <div class="container-fluid">
     {{{body}}}
   </div>
 </body>
