--- a/views/Calorie_counter.handlebars
+++ b/views/Calorie_counter.handlebars
@@ -11,15 +11,14 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
         <ul class="navbar-nav">
           <li class="nav-item active">
-            <a class="nav-link disabled" href="./Calorie_counter.handlebars">Food Diary<span
-                class="sr-only">(current)</span></a>
+            <a class="nav-link disabled" href="./Calorie_counter">Food Diary<span class="sr-only">(current)</span></a>
           </li>
 
           <li class="nav-item">
-            <a class="nav-link" href="./dashboard.handlebars">Dashboard</a>
+            <a class="nav-link" href="./dashboard">Dashboard</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./Graph.handlebars">Track Your Progress</a>
+            <a class="nav-link" href="./Graph">Track Your Progress</a>
           </li>
         </ul>
       </div>
