fixed css issue, added table to calorie counter

--- a/views/Calorie_counter.handlebars
+++ b/views/Calorie_counter.handlebars
@@ -25,7 +25,7 @@
     </nav>
   </div>
   <div class="row">
-    <div class="col" id="foodDiaryColOne">
+    <div class="col-md-4" id="foodDiaryColOne">
       <div class="form-wrap">
         <h1> Hello 'Insert User Name': </h1>
         <br></br>
@@ -61,6 +61,27 @@
         </form>
       </div>
     </div>
-    <div class="col" id="foodDiaryColTwo"></div>
+    <div class="col-md-8" id="foodDiaryColTwo">
+      <table style="text-align:center;" width="650" height="650" border="10">
+        <tr>
+          <td></td>
+          <th>Foods Eaten</th>
+          <th>Servings</th>
+          <th>Total</th>
+        </tr>
+        <tr>
+          <th></th>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+        <tr>
+          <th></th>
+          <td></td>
+          <td></td>
+          <td></td>
+        </tr>
+      </table>
+    </div>
   </div>
 </section>
