--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,15 +1,7 @@
-<section id="add" class="container">
-
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="./styles/styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+<section id="add" class="container-fluid">
 
 
-        <title>Weigh to Go!</title>
+    <div class="row" id="dashboardNav">
         <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand">Weigh to Go</a>
             <!--Button for responsive design-->
@@ -34,5 +26,10 @@
                 </ul>
             </div>
         </nav>
-    </head>
+    </div>
+
+
+
+
+    </body>
 </section>
