--- a/views/Calorie_counter.handlebars
+++ b/views/Calorie_counter.handlebars
@@ -1,4 +1,4 @@
-<section id="add" class="container">
+<section id="add" class="container-fluid">
   <div class="row" id="navbarRow">
     <nav class="navbar navbar-expand-lg navbar-light">
       <a class="navbar-brand">Weigh to Go</a>
@@ -61,7 +61,32 @@
         </form>
       </div>
     </div>
-    <div class="col" id="foodDiaryColTwo"></div>
+    <div class="col" id="foodDiaryColTwo">
+      <div class="col-md-8" id="foodDiaryColTwo">
+        <table style="text-align:center;" width="650" height="650" border="10">
+          <tr>
+            <td></td>
+            <th>Foods Eaten</th>
+            <th>Servings</th>
+            <th>Total</th>
+          </tr>
+          <tr>
+            <th></th>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+          <tr>
+            <th></th>
+            <td></td>
+            <td></td>
+            <td></td>
+          </tr>
+        </table>
+      </div>
+    </div>
+
+  </div>
   </div>
 </section>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
