--- a/views/Graph.handlebars
+++ b/views/Graph.handlebars
@@ -1,15 +1,8 @@
-<section id="add" class="container">
-
-    <head>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <link rel="stylesheet" href="./styles/styles.css">
-        <link href="https://fonts.googleapis.com/css2?family=Alfa+Slab+One&display=swap" rel="stylesheet">
+<section id="add" class="container-fluid">
 
 
-        <title>Weigh to Go!</title>
+    <title>Weigh to Go!</title>
+    <div class="row" id="graphNav">
         <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand">Weigh to Go</a>
             <!--Button for responsive design-->
@@ -34,13 +27,15 @@
                 </ul>
             </div>
         </nav>
-    </head>
+    </div>
     <div class="graphDiv">
         <div id='myChart'><a class="zc-ref" href="https://www.zingchart.com/">Powered by ZingChart</a></div>
     </div>
+
 </section>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
 <script type="text/javascript" src="/js/index.js"></script>
+
 </body>
