--- a/views/Calorie_counter.handlebars
+++ b/views/Calorie_counter.handlebars
@@ -24,7 +24,7 @@
     </nav>
   </div>
   <div class="row">
-    <div class="col" id="foodDiaryColOne">
+    <div class="col-md-4" id="foodDiaryColOne">
       <div class="form-wrap">
         <h1> Hello 'Insert User Name': </h1>
         <br></br>
@@ -92,4 +92,4 @@
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 <script type="text/javascript" src="/js/index.js"></script>
-</body>
+{{!-- </body> --}}
