--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,13 +1,22 @@
-
-<div class="login-page">
-  <div class="form">
-    <form class="login">
-      <input type="text" placeholder="username" />
-      <input type="password" placeholder="password" />
-      <button>SIGN IN</button>
-      <!--this should have an href link to navigate to Calorie_counter? if they already have an account, they do
+<div class="container-fluid">
+  <div class="row" class="container" id="row-1"></div>
+  <div class="row" class="container" id="row-2">
+    <div class="col-md-3" id="col1Login"></div>
+    <div class="col-md-6" id="col2Login">
+      <div class="login-page">
+        <div class="form">
+          <form class="login">
+            <input type="text" placeholder="username" />
+            <input type="password" placeholder="password" />
+            <button>SIGN IN</button>
+            <!--this should have an href link to navigate to Calorie_counter? if they already have an account, they do
       not need to re-enter any data -->
-      <p class="message">Not registered? <a href="/register">CREATE AN ACCOUNT</a></p>
-    </form>
+            <p class="message">Not registered? <a href="/register">CREATE AN ACCOUNT</a></p>
+          </form>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3" id="col3Login"></div>
+    <div class="row" class="container" id="row-3"></div>
   </div>
 </div>
