--- a/views/Calorie_counter.handlebars
+++ b/views/Calorie_counter.handlebars
@@ -57,7 +57,7 @@
               placeholder="For example: 5'6 = 60" value={{numberOfServings}}>
           </div>
           <br></br>
-          {{!-- <input type="submit" value="Add Info" class="btn btn-reverse"> --}}
+          <input type="submit" value="Add Info" class="btn btn-reverse">
         </form>
       </div>
     </div>
