--- a/views/layouts/landingPg.handlebars
+++ b/views/layouts/landingPg.handlebars
@@ -16,9 +16,9 @@
 </head>
 
 <body>
-  <div class="container">
-    {{{body}}}
-  </div>
+  {{!-- <div class="container"> --}}
+  {{{body}}}
+  {{!-- </div> --}}
 </body>
 
 </html>
