--- a/views/register.handlebars
+++ b/views/register.handlebars
@@ -5,7 +5,7 @@
     <div class="col-md-6" id="col2Login">
       <div class="form-wrap">
         <h1>Enter your info:</h1>
-        <p>This informtion will be used to calculate how to help you accomplish your weight loss goals!</p>
+        <p>This information will be used to calculate how to help you accomplish your weight loss goals!</p>
         <form action="/users/register" method="POST">
           <div>
             <label for="username">Create Your Username</label>
