--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,9 +14,9 @@
 </head>
 
 <body>
-  <div class="container-fluid">
-    {{{body}}}
-  </div>
+  {{!-- <div class="container-fluid"> --}}
+  {{{body}}}
+  {{!-- </div> --}}
 </body>
 
 </html>
