--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -1,9 +1,9 @@
 <div class="container-fluid">
-  <div class="row" class="container" id="row-1"></div>
-  <div class="row" class="container" id="row-2">
-    <div class="col-md-3" id="col1Login"></div>
-    <div class="col-md-6" id="col2Login">
-      <div class="login-page">
+  <div class="row m-3" id="row-1"><span id="spanLogin"></span></div>
+  <div class="row m-3" id="row-2">
+    <div class="col" id="col1Login"></div>
+    <div class="col" id="col2Login">
+      <div class="jumbotron login-page p-2">
         <div class="form">
           <form class="login">
             <input type="text" placeholder="username" />
@@ -16,7 +16,7 @@
         </div>
       </div>
     </div>
-    <div class="col-md-3" id="col3Login"></div>
-    <div class="row" class="container" id="row-3"></div>
+    <div class="col" id="col3Login"></div>
   </div>
+  <div class="row m-3" id="row-3"><span id="spanLogin"></span></div>
 </div>
