orange is the now black?

--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -60,18 +60,10 @@
   background-color: #f29441;
 }
 
-#col3Login {
-  background-color: #152659;
-}
-
-#col1Login {
-  background-color: #152659;
-}
-
 #spanLogin {
   height: 33%;
 }
 
 html body {
-  background-color: #152659;
+  background-color: #f29441;
 }
