--- a/views/Graph.handlebars
+++ b/views/Graph.handlebars
@@ -29,13 +29,18 @@
         </nav>
     </div>
     <div class="graphDiv">
+        <br>
+        <h4>Weight Tracking</h4>
         <div id='myChart'><a class="zc-ref" href="https://www.zingchart.com/">Powered by ZingChart</a></div>
+        <br>
+        <h4>Calorie Tracking</h4>
+        <div id='myChart2'><a class="zc-ref" href="https://www.zingchart.com/">Powered by ZingChart</a></div>
+        <br>
     </div>
 
 </section>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
 <script src="https://cdn.zingchart.com/zingchart.min.js"></script>
-<script type="text/javascript" src="/js/index.js"></script>
-
+<script type="text/javascript" src="/js/graph.js"></script>
 </body>
