--- a/public/styles/styles.css
+++ b/public/styles/styles.css
@@ -67,3 +67,10 @@
 html body {
   background-color: #f29441;
 }
+
+img {
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 5px;
+  width: 150px;
+}
