changes with Nate

--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -8,7 +8,7 @@
           <form class="login">
             <input type="text" name="username" id="username" class="input-box" placeholder="Username" value={{username}}>
             <input type="string" name="password" id="password" class="input-box" placeholder="Enter Your Password" value={{password}}>
-            <button>SIGN IN</button>
+            <button id = "login">SIGN IN</button>
             <!--this should have an href link to navigate to Calorie_counter? if they already have an account, they do
       not need to re-enter any data -->
             <p class="message">Not registered? <a href="/register">CREATE AN ACCOUNT</a></p>
@@ -20,3 +20,4 @@
   </div>
   <div class="row m-3" id="row-3"><span id="spanLogin"></span></div>
 </div>
+<script src="js/login.js"></script>
