--- a/views/Calorie_counter.handlebars
+++ b/views/Calorie_counter.handlebars
@@ -14,11 +14,15 @@
             <a class="nav-link disabled" href="./Calorie_counter">Food Diary<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./dashboard">Dashboard</a>
+            <a class="nav-link" href="./members">Dashboard</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Graph">Track Your Progress</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./logout">Logout</a>
+          </li>
+
         </ul>
       </div>
     </nav>
