--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -13,7 +13,7 @@
             <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item active">
-                        <a class="nav-link disabled" href="./dashboard">Dashboard<span
+                        <a class="nav-link disabled" href="./members">Dashboard<span
                                 class="sr-only">(current)</span></a>
                     </li>
 
@@ -23,6 +23,10 @@
                     <li class="nav-item">
                         <a class="nav-link" href="./Graph">Track Your Progress</a>
                     </li>
+                    <li class="nav-item">
+                       <a class="nav-link" href="./logout">Logout</a>
+                    </li>
+
                 </ul>
             </div>
         </nav>
@@ -33,7 +37,7 @@
             <div class="col-md-3" id="col1Dashboard"></div>
             <div class="col-md-6" id="col2Dashboard">
                 <div class="form-wrap">
-                    <h1>Welcome (insert user name)</h1>
+                    <h1>Welcome <span class="member-name"></span></h1>
                     <br></br>
                     <div class="input-group">
                         <label for="current_weight_2">Your Current Weight is: </label>
@@ -67,6 +71,8 @@
             </div>
         </div>
         <div class="row" id="row-3"></div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/members.js"></script>
 
 
         </body>
