sign up updated and dashboard

--- a/views/Calorie_counter.handlebars
+++ b/views/Calorie_counter.handlebars
@@ -14,7 +14,7 @@
             <a class="nav-link disabled" href="./Calorie_counter">Food Diary<span class="sr-only">(current)</span></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./members">Dashboard</a>
+            <a class="nav-link" href="./dashboard">Dashboard</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./Graph">Track Your Progress</a>
@@ -40,7 +40,7 @@
         </form>
       </div>
       <div class="form-wrap">
-        <form action="/users/register" method="POST">
+        <form action="/users/calorie_user" method="POST">
           <div id = "my_container" class = "fatsecret_container">
             <img url="../public/images/nutritionLabel.png" alt="mock up fatsecret nutrition label" style="width:150px">
 <!-- fatsecret API nutrition label 
