--- a/views/Graph.handlebars
+++ b/views/Graph.handlebars
@@ -22,7 +22,7 @@
                         <a class="nav-link" href="../Calorie_counter">Food Diary</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./members">Dashboard</a>
+                        <a class="nav-link" href="./dashboard">Dashboard</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="./logout">Logout</a>
