Food diary database is saving data but still needs to render on the front end, fixed css issues

--- a/views/members.handlebars
+++ b/views/members.handlebars
@@ -24,7 +24,7 @@
                         <a class="nav-link" href="./Graph">Track Your Progress</a>
                     </li>
                     <li class="nav-item">
-                       <a class="nav-link" href="./logout">Logout</a>
+                        <a class="nav-link" href="./logout">Logout</a>
                     </li>
 
                 </ul>
@@ -39,7 +39,7 @@
                 <div class="form-wrap">
                     <h1>Welcome <span class="member-name"></span></h1>
                     <br></br>
-                    <div class="input-group">
+                    {{!-- <div class="input-group">
                         <label for="current_weight_2">Your Current Weight is: </label>
                         <input type="number" name="current_weight_2" id="current_weight_2" class="input-box"
                             placeholder="For example: 150" value={{current_weight_2}}>
@@ -66,13 +66,13 @@
                     <br></br>
                     <label for="goal_difference">You are (insert pounds here) away from your goal!</label>
                     <input type="number" name="goal_difference" id="goal_difference" class="input-box"
-                        placeholder="For example: 150" value={{"goal_difference"}}>
+                        placeholder="For example: 150" value={{"goal_difference"}}> --}}
                 </div>
             </div>
         </div>
         <div class="row" id="row-3"></div>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <script type="text/javascript" src="js/members.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+        <script type="text/javascript" src="js/members.js"></script>
 
 
         </body>
