--- a/views/Calorie_counter.handlebars
+++ b/views/Calorie_counter.handlebars
@@ -27,23 +27,23 @@
       </div>
     </nav>
   </div>
+
   <div class="row">
     <div class="col-md-4" id="foodDiaryColOne">
       <div class="form-wrap">
-        <h1> Hello : </h1>
+        <h1> Hello : <span class="member-name"></span></h1>
         <br></br>
         <h2> Today's Date is: </h2>
         <p class="currentDate">Date</p>
-        <br></br>
+        {{!-- <br></br>
         <h2> Your Calorie Goal for Today is: </h2>
-        <br></br>
+        <br></br> --}}
         </form>
       </div>
       <div class="form-wrap">
-        <form action="/users/register" method="POST">
-          <div id = "my_container" class = "fatsecret_container">
-            <img url="../public/images/nutritionLabel.png" alt="mock up fatsecret nutrition label" style="width:150px">
-<!-- fatsecret API nutrition label 
+        <form class="calorie-counter">
+          {{!-- <form action="/users/register" method="POST"> --}}
+          <!-- fatsecret API nutrition label 
             <script>fatsecret.setContainer("my_container");</script>
             <div id = "search"></div>
               <script>fatsecret.writeHolder("search")</script>
@@ -52,42 +52,58 @@
             <div id = "nutrition_panel"></div>
               <script>fatsecret.writeHolder("nutrition_panel")</script>
               -->
-          </div>
-          <br></br>
-          <div class="input-group">
-            <label for="numberOfServings">Number of Servings</label>
-            <input type="number" name="numberOfServings" id="numberOfServings" class="input-box"
-              placeholder="" value={{numberOfServings}}>
-          </div>
-          <br></br>          
-          <div class="input-group">
-            <label for="numberOfServings">Calories Per Serving</label>
-            <input type="number" name="caloriesPerServing" id="caloriesPerServings" class="input-box"
-              placeholder="" value={{caloriesPerServings}}>
-          </div>
-          <br></br>
-          <button type="button" class="submit btn btn-danger">Add</button>
-        </form>
       </div>
-    </div>
-    <div class="col" id="foodDiaryColTwo">
-      <div class="col-md-8" id="foodDiaryColTwo">
-        <table style="text-align:center;" width="650" height="65" border="10">
-          <tr>
-            <td></td>
-            <th>Foods Eaten</th>
-            <th>Servings</th>
-            <th>Total</th>
-          </tr>
-        </table>
+      <br></br>
+      <div class="input-group">
+        <label for="calorieGoal">Calorie Goal for Today:</label>
+        <input type="number" name="calorieGoal" id="calorieGoal" class="input-box" placeholder="">
       </div>
-    </div>
 
+      <br></br>
+      <div class="input-group">
+        <label for="foodEaten">Food Eaten</label>
+        <input type="text" name="foodEaten" id="foodEaten" class="input-box" placeholder="">
+      </div>
+      <br></br>
+
+      <div class="input-group">
+        <label for="numberOfServings">Number of Servings</label>
+        <input type="number" name="numberOfServings" id="numberOfServings" class="input-box" placeholder="">
+      </div>
+      <br></br>
+      <div class="input-group">
+        <label for="caloriesPerServing">Calories Per Serving</label>
+        <input type="number" name="caloriesPerServing" id="caloriesPerServing" class="input-box" placeholder="">
+      </div>
+      <br></br>
+      <button type="submit" class="btn btn-default">Add</button>
+      </form>
+    </div>
+    <div class="col-md-8" id="foodDiaryColTwo">
+      <table style="text-align:center;" width="650" height="65" border="10">
+        <tr>
+          <td></td>
+          {{#each foodData }}
+          <th>Foods Eaten
+            {{this.foodname}}
+
+          </th>
+          <th>Servings {{this.servings_consumed}}</th>
+          <th>Total Calories</th>
+          {{/each}}
+        </tr>
+      </table>
+    </div>
   </div>
-  </div>
+
+
+
 </section>
 <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment.min.js"></script>
-<script type="text/javascript" src="/js/index.js"></script>
-<script src="https://platform.fatsecret.com/js?key=0dc19338c59a4598a086c7da142aca6b&auto_load=true"></script>
+{{!-- <script type="text/javascript" src="/js/index.js"></script> --}}
+{{!-- <script src="https://platform.fatsecret.com/js?key=0dc19338c59a4598a086c7da142aca6b&auto_load=true"></script> --}}
+<script type="text/javascript" src="js/members.js"></script>
+<script type="text/javascript" src="js/calorie.js"></script>
+
 </body>
