cleaning up api routes, html routes and js files

--- a/views/dashboard.handlebars
+++ b/views/dashboard.handlebars
@@ -1,6 +1,5 @@
+
 <section id="add" class="container-fluid">
-
-
     <div class="row" id="dashboardNav">
         <nav class="navbar navbar-expand-lg navbar-light">
             <a class="navbar-brand">Weigh to Go</a>
@@ -24,7 +23,7 @@
                         <a class="nav-link" href="./Graph">Track Your Progress</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="./logout">Logout</a>
+                       <a class="nav-link" href="./logout">Logout</a>
                     </li>
 
                 </ul>
@@ -45,14 +44,30 @@
                 </div>
                 <br></br>
                 <br></br>
-                <br></br>
-                <h2>Your goal weight is <span class="goal_weight"></span></h1>
+
+            <!--        <div class="input-group">
+                        <label for="weightEntry">Would you like to update your weight today?</label>
+                        <input type="radio" id="yes" name="yes_or_no" value="yes">
+                        <label for="yes">yes</label><br>
+                        <input type="radio" id="no" name="yes_or_no" value="no">
+                        <label for="'no'">no</label><br>
+                    </div>
                     <br></br>
-                    <h2 for="goal_difference">You are <span class="goal_difference"></span>away from your goal!</label>
+                    <div class="input-group">
+                        <label for="age">New current weight: </label>
+                        <input type="number" name="newWeight" id="newWeight" class="input-box"
+                            placeholder="new current weight here">
+                    </div>
+                -->
+                <br></br>
+                <h2>Your goal weight is  <span class="goal_weight"></span></h1>
+                <br></br>
+                <h2 for="goal_difference">You are <span class="goal_difference"></span>away from your goal!</label>
             </div>
         </div>
     </div>
     <div class="row" id="row-3"></div>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script type="text/javascript" src="js/dashboard.js"></script>
 </section>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/dashboard.js"></script>
