--- a/views/signup.handlebars
+++ b/views/signup.handlebars
@@ -1,17 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <title>Weigh to Go!</title>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <link
-      rel="stylesheet"
-      href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.7/lumen/bootstrap.min.css"
-    />
-    <link href="stylesheets/style.css" rel="stylesheet" />
-  </head>
 
-  <body>
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header"></div>
@@ -127,7 +114,7 @@
                 placeholder="For example: 120"
               />
             </div>
-            <p>Once you create your account you will be redirected to login with your email and password.</p>
+            <p>Once you create your account you will be redirected to login using your email and password.</p>
             <button type="submit" class="btn btn-default">SIGN UP</button>
           </form>
           <br />
@@ -138,6 +125,4 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script type="text/javascript" src="js/signup.js"></script>
-  </body>
-  
-</html>
+ 
