--- a/views/layouts/landingPg.handlebars
+++ b/views/layouts/landingPg.handlebars
@@ -10,11 +10,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.3/css/bootstrap.min.css">
 
 
+
+
   <title>Weigh to Go!</title>
 </head>
 
 <body>
-  {{!-- <div class="container-fluid"> --}}
+  {{!-- <div class="container"> --}}
   {{{body}}}
   {{!-- </div> --}}
 </body>
